--- a/static/css/styles.sass
+++ b/static/css/styles.sass
@@ -1,34 +1,26 @@
 @import "bootstrap"
 
-body
-    @extend .container
 
-header
-    @extend .pt-5, .pb-3
 
-    h1
-        @extend .display-5
+// form
+//     @extend .col-sm-8, .col-md-6, .col-lg-4
 
-    p
-        @extend .lead
+//     >div
+//         @extend .py-2
 
-nav, main, footer
-    @extend .pb-5
+//     label
+//         @extend .form-label
 
-form
-    @extend .col-sm-8, .col-md-6, .col-lg-4
+//     div>input
+//         @extend .form-control
 
-    >div
-        @extend .py-2
+//     button[type="submit"]
+//         @extend .btn, .btn-primary
 
-    label
-        @extend .form-label
-
-    input
-        @extend .form-control
-
-    button[type="submit"]
-        @extend .btn, .btn-primary
-
-    button:not(button[type="submit"])
-        @extend .btn, .btn-secondary
+//     button:not(button[type="submit"])
+//         @extend .btn, .btn-secondary
+img
+    max-width: 100%
+    height: auto
+    max-height: 100%
+    @extend .img-fluid
